--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
     "@mui/material": "^5.8.3",
     "@mui/styled-engine-sc": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.2",
+    "firebase": "^9.8.4",
     "gh-pages": "^4.0.0",
     "identity-obj-proxy": "^3.0.0",
     "nanoid": "^4.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
@@ -79,7 +81,6 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
-    "prop-types": "^15.8.1",
     "styled-components": "^5.3.5"
   },
   "loki": {
